assets/css/main.css
---
---

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  color-scheme: dark;
}
body {
  color: white;
  background-color: #1c1a1f;
  font-family: "Atkinson Hyperlegible", sans-serif;
  min-height: 100vh;
  scroll-behavior: smooth;
}

.bg-shape {
  width: 300px;
  height: 300px;
  border-radius: 100%;
}

.bg-blur {
  filter: blur(30px);
  transform: translate3d(0, 0, 0); /* Enable GPU acceleration */
  will-change: filter; /* Hint for better performance */
}

.styled-link {
  @apply text-inherit cursor-pointer relative inline-flex;
}

.styled-link::before,
.styled-link::after {
  background: white;
  bottom: 0.1px;
  content: "";
  height: 0.1em;
  min-height: 1px;
  left: 0;
  position: absolute;
  will-change: transform;
  transform-origin: 0 100%;
}

.styled-link::before {
  width: 100%;
}

.styled-link::after {
  width: 0%;
}

.styled-link:hover::before {
  transform: scaleX(0);
  transform-origin: right;
  transition: transform 0.75s cubic-bezier(0.19, 1, 0.22, 1);
}

.styled-link:hover::after {
  width: 100%;
  transform-origin: left;
  transition: width 0.75s cubic-bezier(0.19, 1, 0.22, 1);
  transition-delay: 0.2s;
}

.link-spanner {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
}

footer {
  margin-top: auto;
}

li::marker {
  content: "- ";
}

.code {
  font-family: "Courier New", Courier, monospace;
}

.project-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
}

#content {
  animation: fadein 1s linear forwards;
}

.card {
  @apply border-white border-solid border p-4 rounded-md flex items-center;
}
.card:hover,
.styled-img:hover {
  transform: scale(1.05);
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
  transition: transform 0.3s ease, box-shadow 0.3s ease;
}

@-webkit-keyframes fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.slide-up {
  animation: slide-up 0.85s cubic-bezier(0.65, 0, 0.35, 1) both;
}

@keyframes slide-up {
  0% {
    transform: translateY(100px);
  }
  100% {
    transform: translateY(0);
  }
}

.bg-gradient {
  background: linear-gradient(
    150deg,
    #000000,
    #020205,
    #0e101e,
    #21233b,
    #3e345e,
    #723b78,
    #af3d73,
    #e84545
  );
  background-size: 400% 400%;
  animation: gradientAnimation 15s ease infinite;
}

@keyframes gradientAnimation {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

